--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,12 @@ p {
   #index-banner .section {
     top: 10%;
     }
+
+.section-intro {
+  height: 100%;
+  width: 100%;
+}
+
 }
 
 @media only screen and (max-width : 600px) {
