--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,13 @@ p {
   font-family: 'Do Hyeon', sans-serif;
   color:#fff;
 }
+
+.header-subtitle2 {
+  margin-top: 20%;
+  margin-bottom: 20%;
+  font-family: 'Do Hyeon', sans-serif;
+  color:#fff;
+}
 .row .col.s12 {
   color: rgba(140, 96, 16, 0.9);
   color: #4a4617;
@@ -70,7 +77,7 @@ p {
     top: 20%;
   }
   #index-banner .section {
-    top: 10%;
+    top:10%;
     }
 
 
