--- a/css/style.css
+++ b/css/style.css
@@ -59,13 +59,13 @@ p {
   font-family: 'Do Hyeon', sans-serif;
   color:#fff;
 }
-
 .header-subtitle2 {
-  margin-top: 20%;
-  margin-bottom: 20%;
-  font-family: 'Do Hyeon', sans-serif;
-  color:#fff;
+  line-height: 0%;
+  font-family: 'Montserrat', sans-serif;
+  color:#f00;
 }
+
+
 .row .col.s12 {
   color: rgba(140, 96, 16, 0.9);
   color: #4a4617;
