--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,11 @@ p {
   color:#fff;
 }
 
+
 .header-subtitle2 {
   line-height: 0%;
   font-family: 'Montserrat', sans-serif;
-  color:#fff;
+  color:#f00;
 }
 
 
